@@ -1,5 +1,10 @@
 2007-09-08  Xavier Claessens  <xclaesse@gmail.com>
 
+	* libempathy-gtk/empathy-log-window.c: Fix crash if there is no date 
+	for a conversation. Fixes bug #473510.
+
+2007-09-08  Xavier Claessens  <xclaesse@gmail.com>
+
 	* python/pyempathygtk/pyempathygtk.override:
 	* python/pyempathygtk/pyempathygtk.defs: Updated for new API.
 
